		- log relative frame dummy nodes (Reinhard Resch)
		- log struct node momentum dofs (Reinhard Resch)
		- added support for octave (Reinhard Resch)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
	Bug fixes:
		- fix node label in external structural force output
		- fix typo in eigenanalysis documentation (Patrick Rix)

MBDyn 1.4.0
	Enhancements:
		- added shell element (Marco Morandini, Riccardo Vescovini)
		- added more verbose info to mapping file generated by
		  create_mls_interface
		- added multiple flavors of Glauert inflow
		- added output flag to .out file
		- added GiNaC-based symbolic drive caller
		- log "body" data (Reinhard Resch)
		- improve umfpack version detection (supports >= 5 only)
		- potential energy private data for rigid bodies
		  (Louis Gagnon)
		- allow meta-data in fixed-step file drive input file
		- added more functions to model namespace
		- added previous time step functions to model namespace
		- added support for f95 modules (Reinhard Resch)
		- added gravity element output (noted by Patrick Rix)
		- added module-asynchronous_machine (Reinhard Resch)
		- added getaddrinfo support
		- added struct node labels logging (Reinhard Resch)
		- added module-hydrodynamic_plain_bearing (Reinhard Resch)
	Backward compatibility issues:
		- output of reference node forces changed in modal mapping
	Known issues:
		- Schur solver is broken
	Bug fixes:
		- fix numpy include path in libmbc (Olivier Ricou)
		- import fixes to kd_* by Ilia Zveda
		  <http://www.mathworks.com/matlabcentral/fileexchange/26649-kdtree-implementation-in-matlab>
		- fix swig detection (noted by Ria Malhan)
		- fix initialization of mbc handlers in C++ wrappers
		- fix loose coupling in external force
		  (noted by Tingnan Zhang)
		- fix handling of KLU refactor (partial)
		  (noted by Romuald Noret)
		- fix math parser recursive call (noted by Doug Baldwin)
		- fix initial assembly dof init (noted by Doug Baldwin)